tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions03(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions03.ts(1,20): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== unicodeExtendedEscapesInRegularExpressions03.ts (1 errors) ====
    var x = /\u{0000}/gu;
                       ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    